# docs/openapi-schema.yml
@@ -221,8 +221,6 @@ paths:
     get:
       security:
         - Token: [ ]
-      operationId: Скачать список покупок
-      description: 'Скачать файл со списком покупок. Это может быть TXT/PDF/CSV. Важно, чтобы контент файла удовлетворял требованиям задания. Доступно только авторизованным пользователям.'
       parameters: []
       responses:
         '200':
@@ -595,7 +593,7 @@ paths:
 
       tags:
         - Подписки
-  /api/ingredients/:
+  /api/materials/:
     get:
       operationId: Список материалов
       description: 'Список материалов с возможностью поиска по имени.'
@@ -613,11 +611,11 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Ingredient'
+                  $ref: '#/components/schemas/Material'
           description: ''
       tags:
         - Материалы
-  /api/ingredients/{id}/:
+  /api/materials/{id}/:
     get:
       operationId: Получение материала
       description: 'Уникальный идентификатор этого материала.'
@@ -633,7 +631,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Ingredient'
+                $ref: '#/components/schemas/Material'
           description: ''
       tags:
         - Материалы
@@ -808,11 +806,11 @@ components:
             $ref: '#/components/schemas/Tag'
         author:
           $ref: '#/components/schemas/User'
-        ingredients:
+        materials:
           description: 'Список материалов'
           type: array
           items:
-            $ref: '#/components/schemas/IngredientInwork'
+            $ref: '#/components/schemas/MaterialInwork'
         is_favorited:
           type: boolean
           description: 'Находится ли в избранном'
@@ -864,7 +862,7 @@ components:
           description: 'Время приготовления (в минутах)'
           type: integer
           minimum: 1
-    Ingredient:
+    Material:
       type: object
       properties:
         id:
@@ -874,14 +872,9 @@ components:
           type: string
           maxLength: 200
           example: 'Капуста'
-        measurement_unit:
-          type: string
-          maxLength: 200
-          example: 'кг'
       required:
         - name
-        - measurement_unit
-    IngredientInwork:
+    MaterialInwork:
       type: object
       properties:
         id:
@@ -892,19 +885,8 @@ components:
           maxLength: 200
           description: 'Название'
           example: 'Картофель отварной'
-        measurement_unit:
-          type: string
-          maxLength: 200
-          description: 'Единицы измерения'
-          example: 'г'
-        amount:
-          type: integer
-          description: 'Количество'
-          minimum: 1
-
       required:
         - name
-        - measurement_unit
     CustomUserCreate:
       type: object
       properties:
@@ -1054,24 +1036,19 @@ components:
         id:
           type: integer
           readOnly: true
-        ingredients:
+        materials:
           description: Список материалов
           type: array
           items:
             example:
               id: 1123
-              amount: 10
             type: object
             properties:
               id:
                 description: 'Уникальный id'
                 type: integer
-              amount:
-                description: 'Количество в работе'
-                type: integer
             required:
               - id
-              - amount
         tags:
           description: 'Список id тегов'
           type: array
@@ -1095,7 +1072,7 @@ components:
           type: integer
           minimum: 1
       required:
-        - ingredients
+        - materials
         - tags
         - image
         - name
@@ -1116,17 +1093,14 @@ components:
       description: Стандартные ошибки валидации DRF
       type: object
       properties:
-        ingredients:
-          description: 'Ошибки в материалах. В приведенном примере в первом и третьем материалах не было ошибок (amount >= 1), а во втором были.'
-          example: [{},{"amount":["Убедитесь, что это значение больше либо равно 1."]}, {}]
+        materials:
           type: array
           items:
             type: object
             properties:
-              amount:
-                type: array
-                items:
-                  type: string
+              type: array
+              items:
+                type: string
 
     SelfMadeError:
       description: Ошибка
